<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.benjamin538</groupId>
    <artifactId>geode</artifactId>
    <version>0.31</version>
    <profiles>
      <profile>
        <id>native</id>
        <build>
          <plugins>
            <plugin>
              <groupId>org.graalvm.buildtools</groupId>
              <artifactId>native-maven-plugin</artifactId>
              <version>0.10.5</version>
              <extensions>true</extensions>
              <executions>
                <execution>
                <id>build-native</id>
                  <goals>
                    <goal>compile</goal>
                  </goals>
                  <phase>package</phase>
                </execution>
              </executions>
              <configuration>
                <buildArgs>
                  <buildArg>--enable-url-protocols=http,https</buildArg>
                  <buildArg>-Os</buildArg>
                  <buildArg>-H:IncludeResources=defaultTemplate.zip|minimalTemplate.zip|consoleui_messages.*|multi-platform.yaml</buildArg>
                  <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                  <buildArg>-H:NativeLinkerOption="${project.basedir}\src\main\resources\app.res"</buildArg>
                </buildArgs>
              </configuration>
            </plugin>
          </plugins>
        </build>
      </profile>
    </profiles>
    <properties>
      <maven.compiler.source>25</maven.compiler.source>
      <maven.compiler.target>25</maven.compiler.target>
    </properties>
    <dependencies>
      <dependency>
          <groupId>info.picocli</groupId>
          <artifactId>picocli</artifactId>
          <version>4.7.7</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jgit</groupId>
        <artifactId>org.eclipse.jgit</artifactId>
        <version>4.6.0.201612231935-r</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline</artifactId>
        <version>3.30.6</version>
      </dependency>
      <dependency>
        <groupId>org.jline</groupId>
        <artifactId>jline-console-ui</artifactId>
        <version>3.30.6</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId> <!-- to remove jgit warning -->
        <artifactId>slf4j-nop</artifactId>
        <version>1.7.2</version>
      </dependency>
      <dependency>
        <groupId>org.json</groupId>
        <artifactId>json</artifactId>
        <version>20251224</version>
        <scope>compile</scope>
      </dependency>
    </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>info.picocli</groupId>
              <artifactId>picocli-codegen</artifactId>
              <version>4.7.6</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <filters>
                <filter>
                  <artifact>*:*</artifact>
                  <excludes>
                    <exclude>META-INF/*.SF</exclude>
                    <exclude>META-INF/*.DSA</exclude>
                    <exclude>META-INF/*.RSA</exclude>
                  </excludes>
              </filter>
              </filters>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>com.benjamin538.Main</mainClass>
                </transformer>
              </transformers>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>